; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_seccomp-util.c_is_seccomp_filter_available.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_seccomp-util.c_is_seccomp_filter_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PR_SET_SECCOMP = common dso_local global i32 0, align 4
@SECCOMP_MODE_FILTER = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EFAULT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @is_seccomp_filter_available to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_seccomp_filter_available() #0 {
  %1 = load i32, i32* @PR_SET_SECCOMP, align 4
  %2 = load i32, i32* @SECCOMP_MODE_FILTER, align 4
  %3 = call i64 @prctl(i32 %1, i32 %2, i32* null, i32 0, i32 0)
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i64, i64* @errno, align 8
  %7 = load i64, i64* @EFAULT, align 8
  %8 = icmp eq i64 %6, %7
  br label %9

9:                                                ; preds = %5, %0
  %10 = phi i1 [ false, %0 ], [ %8, %5 ]
  %11 = zext i1 %10 to i32
  ret i32 %11
}

declare dso_local i64 @prctl(i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
